--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "url": "https://github.com/mikhailmogilnikov/frontend-project-44/issues"
   },
   "type": "module",
-  "homepage": "https://github.com/mikhailmogilnikov/frontend-project-44#readme"
-
+  "homepage": "https://github.com/mikhailmogilnikov/frontend-project-44#readme",
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
