--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,7 @@
     "es2021": true,
     "node": true
   },
-  "plugins": ["jest"],
-  "extends": ["airbnb-base", "plugin:jest/recommended"],
+  "extends": "airbnb-base",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
@@ -13,11 +12,11 @@
     "no-console": 0,
     "import/extensions": [
       "error",
+      "ignorePackages",
       {
-        "ignorePackages": true
-      },
-      {
-        "js": "always"
+        "extensions": {
+          "js": "always"
+        }
       }
     ],
     "no-underscore-dangle": [
